# logos-package-manager

./: CMakeLists.txt  README.md  flake.nix  metadata.json  package_manager_interface.h  package_manager_plugin.cpp  package_manager_plugin.h
example/: CMakeLists.txt  Readme.md  flake.nix  plugin_loader.cpp
